--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                             <a href="#home">Home</a>
                         </li>
                         <li>
-                            <a href="#home">Preços</a>
+                            <a href="#prices">Preços</a>
                         </li>
                         <li>
-                            <a href="#home">Contato</a>
+                            <a href="#contact">Contato</a>
                         </li>
                         <li>
                             <a href="#home" class="default-btn">Entrar</a>
@@ -45,7 +45,7 @@
                     <h1>hDC Host</h1>
                     <p>Os melhores serviços para projetos de todos os tamanhos</p>
                 </div>
-                <section class="services-container">
+                <section id="home" class="services-container">
                     <ul>
                         <li>
                             <i class="fas fa-shield-alt"></i>
@@ -76,7 +76,7 @@
                         </li>
                     </ul>
                 </section>
-                <section class="pricing-container">
+                <section id="prices" class="pricing-container">
                     <h2>Planos e Preços</h2>
                     <p>Selecione o plano que melhor atende as suas necessidades</p>
                     <div class="plans-container">
@@ -141,7 +141,7 @@
                         <input type="submit" value="Procurar domínio">
                     </form>
                 </section>
-                <section class="contact-container">
+                <section id="contact" class="contact-container">
                     <h2>Mande uma mensagem</h2>
                     <p>Envie uma mensagem, em até 4 horas um especialista entrará em contato</p>
                     <form>
